...
                                           , isActive: $isLoginViewIsActive){
                                
                                Button(action: {
                                    
                                    isLoginViewIsActive = true
                                }){
                                    Text("Continue as login")
                                        .foregroundColor(Color.white)
                                        .padding()
                                        .frame(width: 220, height: 48)
                                        .background(colorBackground)
                                        .cornerRadius(24)
                                }
...
